fixed token ui overflow (#13162)

--- a/packages/commonwealth/client/scripts/views/components/sidebar/CommunitySection/TokenTradeWidget/TokenTradeWidget.scss
+++ b/packages/commonwealth/client/scripts/views/components/sidebar/CommunitySection/TokenTradeWidget/TokenTradeWidget.scss
@@ -41,6 +41,12 @@
     }
   }
 
+  .token-symbol-price {
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    gap: 4px;
+  }
+
   .pad-8 {
     padding: 0px 8px;
   }
